# freenet-migrate

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: design.md
freenet-migrate/: Cargo.toml  README.md
freenet-migrate-build/: Cargo.toml  README.md
freenet-migrate-build/examples/: gen_fixture.rs
freenet-migrate-build/src/: codegen.rs  error.rs  guard.rs  lib.rs  registry.rs
freenet-migrate-build/tests/: river_fixtures.rs
freenet-migrate-build/tests/fixtures/: river_legacy_delegates.toml
freenet-migrate/src/: contract.rs  delegate.rs  delegate_migrate.rs  driver.rs  error.rs  lib.rs  lineage.rs  successor.rs
freenet-migrate/tests/: codegen_stdlib_consistency.rs  generated_output_compiles.rs
freenet-migrate/tests/fixtures/: lineage_fixture.rs  lineage_fixture.toml
