[package]
name = "freenet-migrate-build"
version = "0.2.0"
edition = "2021"
# u64::is_multiple_of (and CI clippy expects it) — needs 1.87+.
rust-version = "1.87"
license = "LGPL-3.0-only"
description = "Build-time codegen and CI hash-guard for the freenet-migrate upgrade-migration crate"
repository = "https://github.com/freenet/freenet-migrate"
readme = "README.md"
keywords = ["freenet", "migration", "upgrade", "build", "codegen"]
categories = ["development-tools::build-utils"]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
blake3 = "1"
bs58 = "0.5"
